code improvements | Ashok